--- a/scss/blocks/_header.scss
+++ b/scss/blocks/_header.scss
@@ -19,4 +19,31 @@
 	&__item {
 		margin-left: 15px;
 	}
+	.hamburger {
+		display: none;
+		flex-direction: column;
+		row-gap: 3px;
+	}
+	.hamburger span {
+		width: 16px;
+		height: 3px;
+
+		background: #333d4b;
+		border-radius: 1.5px;
+	}
 }
+
+@media only screen and (max-width: 700px) {
+	.header {
+		&__logo {
+			width: 163px;
+		}
+
+		&__nav {
+			display: none;
+		}
+		.hamburger {
+			display: flex;
+		}
+	}
+} ;
