--- a/scss/about.scss
+++ b/scss/about.scss
@@ -3,16 +3,24 @@
 	height: 100vh;
 
 	display: grid;
-	grid-template-columns: repeat(12, 1fr);
-	grid-template-rows: repeat(6, 1fr);
-	// grid-auto-flow: column;
+	grid-template-columns: repeat(6, 1fr);
+	grid-template-rows: repeat(12, 1fr);
+	grid-auto-flow: column;
 
-	grid-template-areas:
-		'col1 col1 col1 col1 col1 col1 col1 col1 col1 col1 col1 col1'
-		'col2 col2 col2 col2 col2 col2 col3 col3 col3 col3 col3 col3'
-		'col4 col4 col4 col4 col5 col5 col5 col5 col6 col6 col6 col6'
-		'col7 col7 col7 col8 col8 col8 col9 col9 col9 col10 col10 col10'
-		'col11 col11 col12 col12 col13 col13 col14 col14 col15 col15 col16 col16';
+	// grid-template-areas:
+	// 	'col1 col2 col4 col7 col11 col17 '
+	// 	'col1 col2 col4 col7 col11 col18'
+	// 	'col1 col2 col4 col7 col12 col19'
+	// 	'col1 col2 col4 col8 col12 col20'
+	// 	'col1 col2 col5 col8 col13 col21 '
+	// 	'col1 col2 col5 col8 col13 col22'
+	// 	'col1 col3 col5 col9 col14 col23 '
+	// 	'col1 col3 col5 col9 col14 col24'
+	// 	'col1 col3 col6 col9 col15 col25'
+	// 	'col1 col3 col6 col10 col15 col26'
+	// 	'col1 col3 col6 col10 col16 col27'
+	// 	'col1 col3 col6 col10 col16 col28';
+
 	gap: 10px;
 
 	//
@@ -23,52 +31,69 @@
 }
 
 .col1 {
-	grid-area: col1;
+	grid-row: span 12;
+	// grid-area: col1;
 }
 .col2 {
-	grid-area: col2;
+	grid-row: span 6;
+	// grid-area: col2;
 }
 .col3 {
-	grid-area: col3;
+	grid-row: span 6;
+	// grid-area: col3;
 }
 .col4 {
-	grid-area: col4;
+	grid-row: span 4;
+	// grid-area: col4;
 }
 .col5 {
-	grid-area: col5;
+	grid-row: span 4;
+	// grid-area: col5;
 }
 .col6 {
-	grid-area: col6;
+	grid-row: span 4;
+	// grid-area: col6;
 }
 .col7 {
-	grid-area: col7;
+	grid-row: span 3;
+	// grid-area: col7;
 }
 .col8 {
-	grid-area: col8;
+	grid-row: span 3;
+
+	// grid-area: col8;
 }
 .col9 {
-	grid-area: col9;
+	grid-row: span 3;
+	// grid-area: col9;
 }
 .col10 {
-	grid-area: col10;
+	grid-row: span 3;
+	// grid-area: col10;
 }
 .col11 {
-	grid-area: col11;
+	grid-row: span 2;
+	// grid-area: col11;
 }
 .col12 {
-	grid-area: col12;
+	grid-row: span 2;
+	// grid-area: col12;
 }
 .col13 {
-	grid-area: col13;
+	grid-row: span 2;
+	// grid-area: col13;
 }
 .col14 {
-	grid-area: col14;
+	grid-row: span 2;
+	// grid-area: col14;
 }
 .col15 {
-	grid-area: col15;
+	grid-row: span 2;
+	// grid-area: col15;
 }
 .col16 {
-	grid-area: col16;
+	grid-row: span 2;
+	// grid-area: col16;
 }
 
 // .card:nth-child(2) {
